# ZKP-rollup

./: .gitignore  .gitmodules  README.md  deploy_anvil.sh  deploy_anvil_test.sh  docker-compose.yaml  foundry.toml
Sequencer2/: .env  AsyncMongoClient.py  BadgeController.py  MemPool.py  MerkleTreeController.py  SetupService.py  TransactionValidator.py  Types.py  accounts.json  client.py  create_test_transactions.py  main_test.py  readme.md  requirements.txt  utils.py
anvil/: 2^20_leaves_5k_tx_state.json  anvil.sh  state.json
chainOperator/: Cargo.toml
chainOperator/src/: main.rs
client/: MerkleTree.py  bla.json  chain_client.py  client.py  client_setup.py  funded_accounts.json  requirements.txt
client/test_batches/: batch.json  generate_test_batches.ipynb
executor/: Cargo.toml  README.md
executor/host/: Cargo.toml
executor/host/data/: first_deposit_batch.json  first_sepolia_deposit_batch.json  multi_tx_batch.json  second_batch.json  second_sepolia_batch.json
executor/host/src/: main.rs
executor/lib/smt/: Cargo.toml
executor/methods/: Cargo.toml  build.rs
executor/methods/guest/: Cargo.toml
executor/methods/guest/src/: main.rs
frontend/: metamask_rollup_interface.html
lib/sig_k256/: Cargo.toml
lib/sig_k256/src/: lib.rs
lib/smt/src/: lib.rs
my-project/: .gitignore  README.md
operator/: .gitignore  BadgeController.py  Dockerfile  MemPool.py  MerkleTreeController.py  Rollup.json  SetupService.py  TransactionValidator.py  Types.py  create_test_badge.py  create_test_transactions.py  main.py  main_test.py  requirements.txt  test_badge.json  test_websocket.py  utils.py
operator/src/: BadgeController.py  MemPool.py  MerkleTreeController.py  SetupService.py  TransactionValidator.py  Types.py  test_websocket.py  utils.py
rust_merkle_tree/: Cargo.toml
rust_operator/: Cargo.toml  HelloWorld.json  Rollup.json  badge_1_2_rust.json  shared_lib_batch.json
rust_operator/src/: HelloWorld.rs  chainListener.rs  main.rs  store.rs
scripts/: badge_0_1.json  badge_30_20.json  create_test_badge.py  requirements.txt  requirements_badge.txt  verify_signatures.py
scripts/generate_test_data/: test_state_data.ipynb
scripts/test_accounts/: accounts.json  generate_test_accounts.ipynb
sequencer/: .env  Dockerfile  Pydantic_Types.py  README.md  client.py  doc.md  funded_accounts.json  initial_state.json  main.py  main_test.py  requirements.txt  reset_db.sh  reset_mongo.js  standard_funded_accounts.json
sequencer/internals/: Badge_manager.py  Mongo_client.py  Queue_manager.py  Sequence_manager.py  Transaction_Validator.py  __init__.py
sequencer/src/: BadgeController.py  BlockController.py  ChainListener.py  MemPool.py  MerkleTreeController.py  NodeConnector.py  SetupService.py  TransactionValidator.py  Types.py  utils.py
solidity/: README.md
solidity/contracts/: Deposit.sol  HelloWorld.sol  Rollup.sol
solidity/contracts/risc0/: ImageID.sol
solidity/deploy/: Deploy.s.sol
solidity/deployTest/: Deploy.s.sol
solidity/tests/: Elf.sol
