[package]
name = "batch-generator"
version = "0.1.0"
edition = "2021"  # Changed from 2024 to 2021

[dependencies]
smt = { path = "../lib/smt" }
blake2b-rs = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
k256 = { version = "0.13", features = ["ecdsa"] }
hex = "0.4"
sha2 = "=0.10.8"  # Pin exact version for patch
sha3 = "0.10"      # Use standard sha3 - no RISC Zero patch available
# Alternatively, you could use tiny-keccak which has a RISC Zero patch:
# tiny-keccak = "2.0"

[patch.crates-io]
# Only patch sha2 and crypto-bigint - sha3 doesn't have a RISC Zero patch
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
crypto-bigint = { git = "https://github.com/risc0/crypto-bigint", tag = "v0.5.5-risczero.0" }