[package]
name = "guest"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
risc0-zkvm = { version = "2.1.0", default-features = false, features = ["std", "unstable"] }
sha2 = "=0.10.8"
ed25519-dalek = { git = "https://github.com/risc0/curve25519-dalek", tag = "curve25519-4.1.2-risczero.0" }

[profile.release]
lto = "thin"
