[package]
name = "guest"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
risc0-zkvm = { version = "2.1.0", default-features = false, features = ["std", "unstable"] }
smt = { path = "../../lib/smt" }
serde = { version = "1.0", features = ["derive", "alloc"], default-features = false }
k256 = { version = "0.13", features = ["ecdsa", "ecdsa-core"] }
sha3 = "0.10"
hex = "0.4"

[patch.crates-io]
# Use RISC Zero's accelerated versions for precompiles
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256-v0.13.3-risczero.0" }
sha3 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha3-v0.10.8-risczero.0" }

[profile.release]
lto = "thin"
